test/arrays/ferguson/semantic-examples/0-init-callexpr-record.good
0-init-callexpr-record.chpl:18: error: illegal lvalue in assignment
